fixed contrast on top button

--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -85,7 +85,7 @@
     padding: 5px 10px;
     height: 40px;
     font-size: 12px;
-    background-color: #d13cf6;
+    background-color: #8208A1;
     width: fit-content;
 }
 
